--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
             gtag('config', 'UA-144726595-1');
         </script>        
         <meta charset="utf-8">
-        <title>{{ page.title }} / Daniel Zhao</title>
+        <title>{{ page.title }} / Ashley Qin</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link href="/styles/main.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:200,300,400,400i,500,600&display=swap" rel="stylesheet">
@@ -19,26 +19,18 @@
     <body>
         <header>
             <div id="siteTitle">
-                <a href="/">Daniel Zhao</a>
+                <a href="/">Ashley Qin</a>
             </div>
             <nav>
                 {% include nav.html %}
             </nav>
         </header>
-        <main>
-            <div id="gradient-top"></div>
-            <div id="gradient-bottom"></div>
-            {{ content }}
-        </main>
         <footer>
             <div class="icon-bar">
-                <a href="https://instagram.com/danielzhao.ph" class="fa fa-instagram" target="_blank"></a>
-                <a href="https://twitter.com/iamdanzhao" class="fa fa-twitter" target="_blank"></a>
-                <a href="https://medium.com/@danielzhao" class="fa fa-medium" target="_blank"></a>
-                <a href="https://linkedin.com/in/iamdanzhao" class="fa fa-linkedin" target="_blank"></a>
-                <a href="https://github.com/iamdanzhao" class="fa fa-github" target="_blank"></a>
+                <a href="https://www.linkedin.com/in/ashleyqin/" class="fa fa-linkedin" target="_blank"></a>
+                <a href="https://github.com/ashleyyqin" class="fa fa-github" target="_blank"></a>
             </div>
-            <p><strong>© 2020 Daniel Zhao</strong></p>
+            <p> / Thanks for stopping by! 😁</p>
         </footer>
     </body>
 </html>
