--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,3 @@
-<a href="/work/">Work</a>
-<a href="http://photos.danielzhao.com">Photos</a>
-<a href="/writing/">Writing</a>
+<a href="/writing/">about</a>
+<a href="http://photos.danielzhao.com">resume</a>
+<a href="#portfolio">portfolio</a>
