--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
             gtag('config', 'UA-144726595-1');
         </script>        
         <meta charset="utf-8">
-        <title>{{ page.title }} / Ashley Qin</title>
+        <title>Ashley Qin</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link href="/styles/main.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:200,300,400,400i,500,600&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
                 <a href="https://www.linkedin.com/in/ashleyqin/" class="fa fa-linkedin" target="_blank"></a>
                 <a href="https://github.com/ashleyyqin" class="fa fa-github" target="_blank"></a>
             </div>
-            <p> / Thanks for stopping by! 😁</p>
+            <p>/     Thanks for stopping by! 😁</p>
         </footer>
     </body>
 </html>
