--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,12 +25,17 @@
                 {% include nav.html %}
             </nav>
         </header>
+
+        <main>
+            {{ content }}
+        </main>
+
         <footer>
             <div class="icon-bar">
                 <a href="https://www.linkedin.com/in/ashleyqin/" class="fa fa-linkedin" target="_blank"></a>
                 <a href="https://github.com/ashleyyqin" class="fa fa-github" target="_blank"></a>
             </div>
-            <p>/     Thanks for stopping by! 😁</p>
+            <p>Thanks for stopping by! 😁</p>
         </footer>
     </body>
 </html>
