--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,3 @@
-<a href="/writing/">about</a>
-<a href="http://photos.danielzhao.com">resume</a>
-<a href="#portfolio">portfolio</a>
+<a href="/about/">about</a>
+<a href="/media/Qin_Resume.pdf">resume</a>
+<a href="#projects">projects</a>
