--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,3 @@
 <a href="/about">about</a>
 <a href="/media/Qin_Resume.pdf">resume</a>
-<a href="/index/#projects">projects</a>
+<a href="/">projects</a>
