--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="main.js" type="text/javascript"></script>
         <link href="/styles/main.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:200,300,400,400i,500,600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
     </head>
@@ -17,12 +17,7 @@
             </div>
 
             <nav>
-                <ul>
-                    <a href="/about"><li>about</li></a>
-                    <a href="/media/Qin_Resume.pdf"><li>resume</li></a>
-                    <!--<a href="/#projects">projects</a>-->
-                    <li onclick="scrollToPortfolio()">projects</li>
-                </ul>
+                {% include nav.html %}
             </nav>
         </header>
 
