--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Ashley Qin</title>
+        <title>ashley qin</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="main.js" type="text/javascript"></script>
         <link href="/styles/main.css" rel="stylesheet">
@@ -13,7 +13,7 @@
     <body>
         <header>
             <div id="siteTitle">
-                <a href="/">Ashley Qin</a>
+                <a href="/">ashley qin</a>
             </div>
 
             <nav>
