--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,7 @@
 /* MAIN STYLES */
 
 body {
-    font-family: 'IBM Plex Sans', 'Segoe UI', 'Helvetiva Neue', 'Arial', sans-serif;
+    font-family: 'Alata', 'Arial', sans-serif;
     padding: 0;
     margin: 0;
     line-height: 1.85em;
@@ -153,7 +153,7 @@ header a:hover {
     z-index: 2000;
     font-size: 150%;
     letter-spacing: .3em;
-    margin-left: 10em;
+    margin-left: 8em;
 }
 
 nav {
@@ -164,7 +164,8 @@ nav {
 nav a {
     font-size: 85%;
     letter-spacing: 0.05em;
-    margin: 1em;
+    /*margin: 1em;*/
+    margin-right: 7em;
 }
 
 footer {
@@ -470,11 +471,13 @@ main {
 .home-title {
     font-size: 300%;
     margin-bottom: 1em;
+    margin-left: 8em;
 }
 
 .home-subtitle {
     margin-top: 1em;
     margin-bottom: 1em;
+    margin-left: 8em;
     display: block;
     font-weight: 400;
     font-size: 175%;
