--- a/styles/main.css
+++ b/styles/main.css
@@ -45,7 +45,6 @@ footer a:not(.button):not(.arrow):hover {
 }
 
 code {
-    /*font-family: 'IBM Plex Mono', Consolas, 'Courier New', monospace;*/
     font-family: 'Alata';
     padding: 2px 4px;
     font-size: 90%;
@@ -135,7 +134,7 @@ header {
     padding: 0 auto;
     display: flex;
     align-items: center;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     font-weight: 600;
     padding: 3em;
 }
@@ -143,18 +142,18 @@ header {
 header a {
     color: black;
     text-decoration: none;
-    transition: color 0.5s ease-in-out;
+    transition: color 0.25s ease-in-out;
 }
 
 header a:hover {
     color: var(--color-blue);
-    /*transition: all 0.25s;*/
+    transition: all 0.25s;
 }
 
 #siteTitle {
     z-index: 2000;
     font-size: 150%;
-    letter-spacing: .3em;
+    /*letter-spacing: .3em;*/
     margin-left: 8em;
 }
 
@@ -475,14 +474,17 @@ main {
     font-size: 175%;
     font-weight: bold;
     /*margin-bottom: 1em;*/
+    margin-top: 8em;
     margin-left: 8em;
+    margin-right: 8em;
     color: #c0c0c0;
 }
 
 .home-title2 {
     font-family: Alata;
-    font-size: 350%;
+    font-size: 400%;
     margin-bottom: 1em;
+    margin-left: 8em;
     margin-left: 8em;
 }
 
@@ -491,7 +493,7 @@ main {
     margin-bottom: 1em;
     margin-left: 8em;
     display: block;
-    font-weight: 400;
+    font-weight: 300;
     font-size: 175%;
     line-height: 150%;
     color: #c0c0c0;
@@ -514,22 +516,7 @@ main {
     text-transform: uppercase;
     font-size: 90%;
     font-weight: 700;
-/*    color: gray;*/
 }
-
-/*
-.home-pills {
-    display: inline-block;
-    margin-top: 1.5em;
-    padding: 0.25em 0.75em;
-    color: white;
-    background-color: var(--color-blue);
-    text-transform: uppercase;
-    font-size: 90%;
-    font-weight: 700;
-    border-radius: 3px;
-}
-*/
 
 .home-image {
     object-fit: cover;
@@ -555,19 +542,21 @@ main {
 /* PAGE STYLES: BIO */
 
 #bio-prof-pic {
-    border-radius: 50%;
+    /*border-radius: 50%;
     width: 320px;
     float: right;
-    margin: -140px 0 24px 20px;
+    margin: -140px 0 24px 20px;*/
+    margin-top: 8em;
+    margin-left: 2em;
 }
 
 @media screen and (max-width: 768px) {
     #bio-prof-pic {
         float: none;
-        margin: 0;
+        /*margin: 0;
         margin-bottom: 20px;
         margin-top: -120px;
-        width: 280px;
+        width: 280px;*/
     }
 }
 
@@ -694,4 +683,9 @@ main {
     z-index: 2003;
     color: white;
     text-align: center;
+}
+
+.projects {
+    margin-left: 8em;
+    margin-top: 4em;
 }
