--- a/styles/main.css
+++ b/styles/main.css
@@ -142,17 +142,17 @@ header {
 header a {
     color: black;
     text-decoration: none;
-    transition: color 0.25s ease-in-out;
+    /*transition: color 0.25s ease-in-out;*/
 }
 
 header a:hover {
     color: var(--color-blue);
-    transition: all 0.25s;
+    /*transition: all 0.25s;*/
 }
 
 #siteTitle {
     z-index: 2000;
-    font-size: 150%;
+    font-size: 200%;
     /*letter-spacing: .3em;*/
     margin-left: 8em;
 }
@@ -163,7 +163,7 @@ nav {
 }
 
 nav a {
-    font-size: 85%;
+    font-size: 100%;
     letter-spacing: 0.05em;
     /*margin: 1em;*/
     margin-right: 7em;
@@ -227,7 +227,7 @@ ol li > * {
     margin: 0;
 }
 
-.list-plus,
+/*.list-plus,
 .list-arrows {
     padding-left: 40px;
     margin-top: 1.5em;
@@ -291,7 +291,7 @@ ol li > * {
 .list-bar.buttons li a {
     color: white;
     text-decoration: none;  
-}
+}*/
 
 /* LAYOUT: CONTAINERS*/
 
@@ -473,7 +473,7 @@ main {
 .home-title1 {
     font-size: 175%;
     font-weight: bold;
-    /*margin-bottom: 1em;*/
+    margin-bottom: 0.5em;
     margin-top: 8em;
     margin-left: 8em;
     margin-right: 8em;
@@ -491,7 +491,7 @@ main {
 .home-subtitle {
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-left: 8em;
+    margin-left: 4em;
     display: block;
     font-weight: 300;
     font-size: 175%;
@@ -546,8 +546,9 @@ main {
     width: 320px;
     float: right;
     margin: -140px 0 24px 20px;*/
-    margin-top: 8em;
-    margin-left: 2em;
+    float: right;
+    margin-top: 4em;
+    margin-right: 2em;
 }
 
 @media screen and (max-width: 768px) {
