--- a/styles/main.css
+++ b/styles/main.css
@@ -142,19 +142,16 @@ header {
 header a {
     color: black;
     text-decoration: none;
-    /*transition: color 0.25s ease-in-out;*/
 }
 
 header a:hover {
     color: var(--color-blue);
-    /*transition: all 0.25s;*/
 }
 
 #siteTitle {
     z-index: 2000;
     font-size: 200%;
-    /*letter-spacing: .3em;*/
-    margin-left: 8em;
+    margin-left: 6em;
 }
 
 nav {
@@ -166,7 +163,7 @@ nav a {
     font-size: 100%;
     letter-spacing: 0.05em;
     /*margin: 1em;*/
-    margin-right: 7em;
+    margin-right: 9em;
 }
 
 footer {
@@ -475,8 +472,8 @@ main {
     font-weight: bold;
     margin-bottom: 0.5em;
     margin-top: 8em;
-    margin-left: 8em;
-    margin-right: 8em;
+    /*margin-left: 8em;
+    margin-right: 8em;*/
     color: #c0c0c0;
 }
 
@@ -484,8 +481,8 @@ main {
     font-family: Alata;
     font-size: 400%;
     margin-bottom: 1em;
-    margin-left: 8em;
-    margin-left: 8em;
+    margin-top: 2em;
+    /*margin-left: 8em;*/
 }
 
 .home-subtitle {
@@ -546,7 +543,6 @@ main {
     width: 320px;
     float: right;
     margin: -140px 0 24px 20px;*/
-    float: right;
     margin-top: 4em;
     margin-right: 2em;
 }
