--- a/styles/main.css
+++ b/styles/main.css
@@ -483,7 +483,7 @@ main {
     font-size: 400%;
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-left: 4em;
+    /*margin-left: 4em;*/
     display: block;
 }
 
