--- a/styles/main.css
+++ b/styles/main.css
@@ -162,7 +162,7 @@ nav a {
     font-size: 100%;
     letter-spacing: 0.05em;
     margin: 1em;
-    margin-right: 15em;
+    margin-left: 15em;
 }
 
 footer {
@@ -482,7 +482,7 @@ main {
     font-size: 400%;
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-left: 4em;
+    /*margin-left: 4em;*/
     display: block;
 }
 
