--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,3 @@
-<a class="align-middle link-primary header-link mr-2" href="/about">about</a>
-<a class="align-middle link-primary header-link mr-2" href="/media/Qin_Resume.pdf" target="_blank">resume</a>
-<a class="align-middle link-primary header-link mr-2" href="/#projects">projects</a>
+<a href="/about">about</a>
+<a href="/media/Qin_Resume.pdf" target="_blank">resume</a>
+<a href="/#projects">projects</a>
