--- a/styles/main.css
+++ b/styles/main.css
@@ -156,14 +156,13 @@ header a:hover {
 
 nav {
     z-index: 2000;
-    margin-left: 15em;
+    margin-left: auto;
 }
 
 nav a {
     font-size: 100%;
     letter-spacing: 0.05em;
     margin: 1em;
-    margin-left: 15em;
 }
 
 footer {
@@ -497,13 +496,6 @@ main {
     line-height: 150%;
     color: #c0c0c0;
 }
-
-/*.home-blurb {
-    display: block;
-    font-weight: 400;
-    font-size: 125%;
-    line-height: 145%;
-}*/
 
 .home-bottom {
     display: block;
