--- a/styles/main.css
+++ b/styles/main.css
@@ -134,7 +134,6 @@ header {
     padding: 0 auto;
     display: flex;
     align-items: center;
-    /*text-transform: uppercase;*/
     font-weight: 600;
     padding: 3em;
 }
@@ -155,8 +154,10 @@ header a:hover {
 }
 
 nav {
+    display: flex;
     z-index: 2000;
     margin-left: auto;
+    justify-items: right;
 }
 
 nav a {
