--- a/styles/main.css
+++ b/styles/main.css
@@ -156,7 +156,7 @@ header a:hover {
 nav {
     display: flex;
     z-index: 2000;
-    /*margin-left: auto;*/
+    margin-left: auto;
     justify-items: right;
     margin-right: 6em;
 }
@@ -469,10 +469,10 @@ main {
 }
 
 .home-title1 {
-    display: block;
     margin-top: 1em;
     margin-bottom: 1em;
     margin-left: 4em;
+    display: block;
     font-weight: 400;
     font-size: 200%;
     line-height: 150%;
@@ -480,12 +480,12 @@ main {
 }
 
 .home-title2 {
-    display: block;
-    /*font-family: Alata;*/
+    font-family: Alata;
     font-size: 400%;
     margin-top: 1em;
     margin-bottom: 1em;
     /*margin-left: 4em;*/
+    display: block;
 }
 
 .home-subtitle {
@@ -541,7 +541,7 @@ main {
     margin-top: 4em;
     margin-right: 2em;*/
     display: flex;
-    justify-items: right;
+    justify-items: flex-end;
 }
 
 @media screen and (max-width: 768px) {
