--- a/styles/main.css
+++ b/styles/main.css
@@ -164,6 +164,7 @@ nav a {
     font-size: 100%;
     letter-spacing: 0.05em;
     margin: 1em;
+    margin-right: 6em;
 }
 
 footer {
@@ -500,7 +501,8 @@ main {
 
 .home-bottom {
     display: block;
-    height: calc(2vh + 1vw);
+    /*height: calc(2vh + 1vw);*/
+    height: 6em;
 }
 
 .home-pills {
@@ -539,8 +541,10 @@ main {
     margin: -140px 0 24px 20px;
     margin-top: 4em;
     margin-right: 2em;*/
-    float: right;
-    margin: 10px;
+    text-align:right;
+    width:60%;
+    display:block;
+    margin:auto;
 }
 
 @media screen and (max-width: 768px) {
