--- a/styles/main.css
+++ b/styles/main.css
@@ -480,8 +480,8 @@ main {
 }
 
 .home-title2 {
-    font-family: Alata;
-    font-size: 400%;
+    /*font-family: Alata;*/
+    font-size: 370%;
     margin-top: 1em;
     margin-bottom: 1em;
     /*margin-left: 4em;*/
@@ -489,7 +489,7 @@ main {
 }
 
 .home-subtitle {
-    margin-top: 1em;
+    /*margin-top: 1em;*/
     margin-bottom: 1em;
     margin-left: 4em;
     display: block;
@@ -685,4 +685,9 @@ main {
 .projects {
     margin-left: 8em;
     margin-top: 4em;
+}
+
+.img_projects {
+    display: flex;
+    justify-items: right;
 }
