--- a/styles/main.css
+++ b/styles/main.css
@@ -35,6 +35,7 @@ footer a:not(.button):not(.fa):not(.arrow){
     transition: color 0.5s ease-in-out;
 }
 
+/*
 main a:not(.button):not(.arrow):focus,
 main a:not(.button):not(.arrow):hover,
 footer a:not(.button):not(.arrow):focus,
@@ -42,7 +43,7 @@ footer a:not(.button):not(.arrow):hover {
     background: var(--color-blue);
     color: white;
     transition: all 0.25s;
-}
+}*/
 
 code {
     font-family: 'Alata';
@@ -163,7 +164,7 @@ nav {
 nav a {
     font-size: 100%;
     letter-spacing: 0.05em;
-    margin: 1em;
+    /*margin: 1em;*/
     margin-right: 6em;
 }
 
@@ -480,11 +481,9 @@ main {
 }
 
 .home-title2 {
-    /*font-family: Alata;*/
     font-size: 370%;
     margin-top: 1em;
     margin-bottom: 1em;
-    /*margin-left: 4em;*/
     display: block;
 }
 
@@ -689,5 +688,14 @@ main {
 
 .img_projects {
     display: flex;
-    justify-items: right;
+    justify-items: flex-end;
+    align-content: flex-end;
+    text-align: right;
+}
+
+.project-title {
+    font-size: 330%;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    display: block;
 }
