--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,7 @@ img {
     position: relative;
     display: block;
     z-index: 2000;
+    float: right;
 }
 
 img a:hover {
@@ -502,8 +503,8 @@ main {
 
 .home-bottom {
     display: block;
-    /*height: calc(2vh + 1vw);*/
-    height: 6em;
+    height: calc(2vh + 1vw);
+    margin-bottom: 8em;
 }
 
 .home-pills {
@@ -546,8 +547,9 @@ main {
     width:60%;
     display:block;
     margin:auto;*/
-    display: flex;
-    justify-items: right;
+    float: right;
+    width:60%;
+    margin: -140px 0 24px 20px;
 
 }
 
@@ -686,16 +688,14 @@ main {
     text-align: center;
 }
 
+/*
 .projects {
     margin-left: 8em;
     margin-top: 4em;
-}
+}*/
 
 .img_projects {
-    display: flex;
-    justify-items: flex-end;
-    align-content: flex-end;
-    text-align: right;
+    float: right;
 }
 
 .project-title {
