--- a/styles/main.css
+++ b/styles/main.css
@@ -678,11 +678,10 @@ main {
     text-align: center;
 }
 
-/*
 .projects {
     margin-left: 8em;
     margin-top: 4em;
-}*/
+}
 
 .img_projects {
     float: right;
