--- a/styles/main.css
+++ b/styles/main.css
@@ -470,8 +470,8 @@ main {
 
 #bio-prof-pic {
     float: right;
-    width:60%;
-    margin: -140px 0 24px 20px;
+    width:30%;
+    /*margin: -140px 0 24px 20px;*/
 
 }
 
