--- a/styles/main.css
+++ b/styles/main.css
@@ -419,7 +419,7 @@ main {
     font-size: 370%;
     margin-top: 1em;
     margin-bottom: 0.5em;
-    margin-left: 4em;
+    /*margin-left: 4em;*/
     display: block;
 }
 
@@ -632,4 +632,5 @@ main {
     font-size: 150%;
     display: block;
     align-items: center;
+    margin-bottom: 0.5em;
 }
