--- a/styles/main.css
+++ b/styles/main.css
@@ -401,7 +401,7 @@ main {
 
 .home-top {
     display: block;
-    height: 4em;
+    height: 2em;
 }
 
 .home-title1 {
@@ -419,8 +419,8 @@ main {
     font-size: 370%;
     margin-top: 1em;
     margin-bottom: 0.5em;
-    /*margin-left: 4em;*/
-    display: block;
+    /*margin-left: 4em;
+    display: block;*/
 }
 
 .home-subtitle {
