--- a/styles/main.css
+++ b/styles/main.css
@@ -419,7 +419,7 @@ main {
     font-size: 370%;
     margin-top: 1em;
     margin-bottom: 0.5em;
-    margin-left: 3em;
+    /*margin-left: 3em;*/
 }
 
 .home-subtitle {
@@ -616,7 +616,7 @@ main {
 
 .img_projects {
     justify-content: right !important;
-    margin-left: 3em;
+    margin-right: 1.5em;
 }
 
 .project-title {
