--- a/styles/main.css
+++ b/styles/main.css
@@ -417,9 +417,10 @@ main {
 
 .home-title2 {
     font-size: 370%;
-    margin-top: 1em;
     margin-bottom: 0.5em;
-    /*margin-left: 3em;*/
+    display: block;
+    /*margin-left: 3em;
+    margin-top: 1em;*/
 }
 
 .home-subtitle {
@@ -617,6 +618,7 @@ main {
 .img_projects {
     justify-content: right !important;
     margin-right: 1.5em;
+    max-width:900px;
 }
 
 .project-title {
@@ -632,4 +634,5 @@ main {
     display: block;
     align-items: center;
     margin-bottom: 0.5em;
+    margin-top: 2em;
 }
