--- a/styles/main.css
+++ b/styles/main.css
@@ -399,14 +399,8 @@ main {
 
 /* PAGE STYLES: HOME */
 
-.home-top {
-    display: block;
-    height: 1em;
-}
-
 .home-title1 {
-    /*margin-top: 1em;*/
-    margin-bottom: 1em;
+    /*margin-bottom: 1em;*/
     margin-left: 3em;
     display: block;
     font-weight: 500;
@@ -418,9 +412,8 @@ main {
 .home-title2 {
     font-size: 370%;
     margin-bottom: 0.5em;
+    margin-left: 3em;
     display: block;
-    /*margin-left: 3em;
-    margin-top: 1em;*/
 }
 
 .home-subtitle {
@@ -469,7 +462,6 @@ main {
 /* PAGE STYLES: BIO */
 
 #bio-prof-pic {
-    /*float: right;*/
     justify-content: right !important;
     width:50%;
     margin-left: 0.5em;
@@ -478,10 +470,10 @@ main {
 @media screen and (max-width: 768px) {
     #bio-prof-pic {
         float: none;
-        /*margin: 0;
+        margin: 0;
         margin-bottom: 20px;
         margin-top: -120px;
-        width: 280px;*/
+        width: 280px;
     }
 }
 
