--- a/styles/main.css
+++ b/styles/main.css
@@ -401,7 +401,7 @@ main {
 
 .home-title1 {
     /*margin-bottom: 1em;*/
-    margin-left: 3em;
+    /*margin-left: 3em;*/
     display: block;
     font-weight: 500;
     font-size: 200%;
