--- a/styles/main.css
+++ b/styles/main.css
@@ -463,7 +463,7 @@ main {
 
 #bio-prof-pic {
     justify-content: right !important;
-    width:50%;
+    width:35%;
     margin-left: 0.5em;
 }
 
@@ -629,4 +629,12 @@ main {
     margin-bottom: 0.5em;
     margin-top: 2em;
     line-height: 1.6;
+}
+
+.work {
+    align-items: center;
+    font-size: 370%;
+    margin-top: 5em;
+    margin-bottom: 3em;
+    display: block;
 }
