--- a/styles/main.css
+++ b/styles/main.css
@@ -401,7 +401,8 @@ main {
 
 .home-title1 {
     margin-bottom: 1em;
-    margin-left: 2.6em;
+    /*margin-left: 2.6em;*/
+    margin-left: auto;
     display: block;
     font-weight: 500;
     font-size: 200%;
@@ -412,13 +413,15 @@ main {
 .home-title2 {
     font-size: 370%;
     margin-bottom: 0.5em;
-    margin-left: 1.3em;
+    /*margin-left: 1.3em;*/
+    margin-left: auto;
     display: block;
 }
 
 .home-subtitle {
     margin-bottom: 1em;
-    margin-left: 3em;
+    /*margin-left: 3em;*/
+    margin-left: auto;
     display: block;
     font-weight: 300;
     font-size: 175%;
@@ -465,6 +468,7 @@ main {
     justify-content: right !important;
     width:25%;
     margin-left: 0.5em;
+    margin-top:-1.5em;
 }
 
 @media screen and (max-width: 768px) {
@@ -607,10 +611,8 @@ main {
     margin-top: 4em;
 }
 
-.img_projects {
-    justify-content: right !important;
-    /*margin-right: 1.5em;*/
-    margin-left: 35em;
+.img_dataprojects {
+    text-align: center;
     max-width:900px;
 }
 
@@ -636,6 +638,6 @@ main {
     font-size: 400%;
     margin-top: 5em;
     margin-bottom: 1em;
-    margin-left: 50%;
+    text-align: center;
     display: block;
 }
