--- a/styles/main.css
+++ b/styles/main.css
@@ -114,18 +114,6 @@ a.anchor {
     color: var(--color-blue);
 }
 
-.blue-block {
-    color: white;
-    font-weight: bold;
-    background-color: var(--color-blue);
-}
-
-.pink-block {
-    color: white;
-    font-weight: bold;
-    background-color: var(--color-pink);
-}
-
 .small-text {
     font-size: 70%;
     display: inline;
@@ -467,8 +455,9 @@ main {
 #bio-prof-pic {
     justify-content: right !important;
     width:25%;
-    margin-left: 0.5em;
+    margin-left: 2em;
     margin-top:-1.5em;
+    margin-right: 6em;
 }
 
 @media screen and (max-width: 768px) {
@@ -636,8 +625,8 @@ main {
 .work {
     align-items: center;
     font-size: 400%;
-    margin-top: 5em;
-    margin-bottom: 1em;
+    margin-top: 4em;
+    margin-bottom: 0.5em;
     text-align: center;
     display: block;
 }
