--- a/styles/main.css
+++ b/styles/main.css
@@ -198,6 +198,7 @@ footer > * {
 /* LISTS */
 
 ul {
+    display: list-item;
     list-style: circle;
     margin: 0;
     padding: 0;
@@ -456,6 +457,7 @@ main {
     justify-content: right !important;
     width:25%;
     margin-left: 2em;
+    margin-right:-2em;
     margin-top:-1.5em;
 }
 
@@ -625,7 +627,6 @@ main {
     align-items: center;
     font-size: 400%;
     margin-top: 4em;
-    /*margin-bottom: 0.5em;*/
     text-align: center;
     display: block;
 }
