--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
             {{ content }}
         </main>
 
-        <footer>
+        <footer style="margin-top: 4em">
             <div class="icon-bar">
                 <a href="https://www.linkedin.com/in/ashleyqin/" class="fa fa-linkedin" target="_blank"></a>
                 <a href="https://github.com/ashleyyqin" class="fa fa-github" target="_blank"></a>
