--- a/styles/main.css
+++ b/styles/main.css
@@ -149,8 +149,7 @@ nav {
     z-index: 2000;
     margin-left: auto;
     margin-right: auto;
-    justify-items: center;
-    /*justify-items: right;*/
+    justify-items: right;
 }
 
 nav a {
@@ -604,7 +603,7 @@ main {
 }
 
 .img_dataprojects {
-    margin-left: 6em;
+    margin-left: 8em;
     max-width:900px;
 }
 
