get a sense of divs

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,8 @@
 /* VARIABLES */
 
 :root {
-    --color-blue: #0083ff;
+    /*--color-blue: #0083ff;*/
+    --color-blue: #164afb;
     --color-pink: #ff5470;
     --color-slate: #273142;
 }
