--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,6 @@
 /* VARIABLES */
 
 :root {
-    /*--color-blue: #0083ff;*/
     --color-blue: #164afb;
     --color-pink: #ff5470;
     --color-slate: #273142;
@@ -19,7 +18,6 @@ body {
 img {
     width: 100%;
     border: none;
-    /*position: relative;*/
     display: block;
     z-index: 2000;
 }
@@ -33,8 +31,8 @@ footer a:not(.button):not(.fa):not(.arrow){
     padding-left: 2px;
     padding-right: 2px;
     color: black;
-    background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(60%, transparent), color-stop(60%, rgba(0, 131, 255, 0.2)), to(rgba(0, 131, 255, 0.2)));
-    background: linear-gradient(to bottom, transparent 0, transparent 60%, rgba(0, 131, 255, 0.2) 60%, rgba(0, 131, 255, 0.2) 100%);
+    /*background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(60%, transparent), color-stop(60%, rgba(0, 131, 255, 0.2)), to(rgba(0, 131, 255, 0.2)));*/
+    /*background: linear-gradient(to bottom, transparent 0, transparent 60%, rgba(0, 131, 255, 0.2) 60%, rgba(0, 131, 255, 0.2) 100%);*/
     text-decoration: none;
     transition: color 0.5s ease-in-out;
 }
@@ -552,36 +550,6 @@ main {
 
 .byline-date {
     color: #666;
-}
-
-/* PAGE STYLES: GRADIENT */
-
-#gradient-top {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 150px;
-    z-index: 1000;
-    position: fixed;
-    display: block;
-    background: -webkit-linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0));
-    background: -o-linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0));
-    background: -moz-linear-gradient(rgba(255,255,250,1), rgba(255,255,255,0));
-    background: linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0));
-}
-
-#gradient-bottom {
-    width: 100%;
-    height: 150px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    position: fixed;
-    display: block;
-    background: -webkit-linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
-    background: -o-linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
-    background: -moz-linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
-    background: linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
 }
 
 /* MISC */
