--- a/styles/main.css
+++ b/styles/main.css
@@ -33,6 +33,7 @@ footer a:not(.button):not(.fa):not(.arrow){
     color: black;
     /*background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(60%, transparent), color-stop(60%, rgba(0, 131, 255, 0.2)), to(rgba(0, 131, 255, 0.2)));*/
     /*background: linear-gradient(to bottom, transparent 0, transparent 60%, rgba(0, 131, 255, 0.2) 60%, rgba(0, 131, 255, 0.2) 100%);*/
+    background: linear-gradient(to top, var(--color-blue) 50%, transparent 50%);
     text-decoration: none;
     transition: color 0.5s ease-in-out;
 }
