--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,6 @@
 
 :root {
     --color-blue: #164afb;
-    /*--color-blue: #33CAFF;*/
     --color-pink: #ff5470;
     --color-slate: #273142;
 }
@@ -35,17 +34,18 @@ footer a:not(.button):not(.fa):not(.arrow){
     /*background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(60%, transparent), color-stop(60%, rgba(0, 131, 255, 0.2)), to(rgba(0, 131, 255, 0.2)));*/
     /*background: linear-gradient(to bottom, transparent 0, transparent 60%, rgba(0, 131, 255, 0.2) 60%, rgba(0, 131, 255, 0.2) 100%);*/
     /*background: linear-gradient(to top, var(--color-blue) 50%, transparent 50%);*/
-    background: var(--color-blue);
-    text-decoration: none;
-    transition: color 0.5s ease-in-out;
+    /*background: var(--color-blue);*/
+    /*text-decoration: none;*/
+    /*transition: color 0.5s ease-in-out;*/
 }
 
 main a:not(.button):not(.arrow):focus,
 main a:not(.button):not(.arrow):hover,
 footer a:not(.button):not(.arrow):focus,
 footer a:not(.button):not(.arrow):hover {
-    background: var(--color-blue);
-    color: white;
+    /*background: var(--color-blue);*/
+    /*color: white;*/
+    color: var(--color-blue);
     transition: all 0.25s;
 }
 
@@ -151,22 +151,24 @@ nav {
     z-index: 2000;
     margin-left: auto;
     justify-items: right;
-    font-size: 100%;
-    letter-spacing: 0.05em;
-    margin-right: 6em;
 }
 
 .underline {
-    border-bottom: 1px solid var(--color-blue);
+    border-bottom: 2px solid var(--color-blue);
     display: inline-block;
     line-height: 0.85;
+    text-shadow:
+    2px 2px white,
+    2px -2px white,
+    -2px 2px white,
+    -2px -2px white;
 }
 
-/*nav a {
+nav a {
     font-size: 100%;
     letter-spacing: 0.05em;
     margin-right: 6em;
-}*/
+}
 
 footer {
     padding: auto;
@@ -611,4 +613,6 @@ main {
     display: block;
     color: white;
     background: var(--color-blue);
+    height: 35px;
+    width: 140px;
 }
