--- a/styles/main.css
+++ b/styles/main.css
@@ -39,7 +39,7 @@ main a:not(.button):not(.arrow):hover,
 footer a:not(.button):not(.arrow):focus,
 footer a:not(.button):not(.arrow):hover {
     color: var(--color-blue);
-    /*transition: all 0.25s;*/
+    text-decoration: underline solid var(--color-blue);
 }
 
 code {
@@ -146,7 +146,29 @@ nav {
     justify-items: right;
 }
 
+.text-shadow {
+  text-shadow:
+    -2px -2px white,
+    -2px 2px white,
+    2px -2px white,
+    2px 2px white;
+}
+
 .underline {
+  background-size: 1px 1em;
+  box-shadow:
+    inset 0 -0.175em white,
+    inset 0 -0.2em #000;
+  display: inline;
+}
+
+.underline--blue {
+    box-shadow:
+    inset 0 -0.175em white,
+    inset 0 -0.2em blue;
+}
+
+/*.underline {
     border-bottom: 2px solid var(--color-blue);
     display: inline-block;
     line-height: 0.90;
@@ -155,7 +177,7 @@ nav {
     2px -2px white,
     -2px 2px white,
     -2px -2px white;
-}
+}*/
 
 nav a {
     font-size: 100%;
@@ -595,6 +617,8 @@ main {
 }
 
 .work {
+    box-sizing: content-box;
+    width: 70%;
     align-items: center;
     font-size: 400%;
     margin-top: 4em;
