--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,3 @@
-<a href="/about"><span class="underline">about</span></a>
-<a href="/media/Qin_Resume.pdf" target="_blank"><span class="underline">resume</span></a>
-<a href="/#projects"><span class="underline">projects</span></a>
+<a href="/about"><span class="underline_nav">about</span></a>
+<a href="/media/Qin_Resume.pdf" target="_blank"><span class="underline_nav">resume</span></a>
+<a href="/#projects"><span class="underline_nav">projects</span></a>
