--- a/styles/main.css
+++ b/styles/main.css
@@ -157,6 +157,17 @@ nav {
     -2px -2px white;
 }
 
+.underline_nav {
+    border-bottom: 2px solid var(--color-blue);
+    display: inline-block;
+    line-height: 1.3;
+    text-shadow:
+    2px 2px white,
+    2px -2px white,
+    -2px 2px white,
+    -2px -2px white;
+}
+
 nav a {
     font-size: 100%;
     letter-spacing: 0.05em;
