--- a/styles/main.css
+++ b/styles/main.css
@@ -160,7 +160,7 @@ nav {
 .underline_nav {
     border-bottom: 2px solid var(--color-blue);
     display: inline-block;
-    line-height: 1.3;
+    line-height: 1.2;
     text-shadow:
     2px 2px white,
     2px -2px white,
@@ -579,9 +579,12 @@ main {
     text-align: center;
 }
 
-.projects {
-    margin-left: 8em;
-    margin-top: 4em;
+.img_projects {
+    justify-content: right !important;
+    width:50%;
+    margin-left: 2em;
+    margin-right:-3em;
+    margin-top:-1.5em;
 }
 
 .img_dataprojects {
