--- a/styles/main.css
+++ b/styles/main.css
@@ -160,7 +160,7 @@ nav {
 .underline_nav {
     border-bottom: 2px solid var(--color-blue);
     display: inline-block;
-    line-height: 1.2;
+    line-height: 1.1;
     text-shadow:
     2px 2px white,
     2px -2px white,
@@ -582,9 +582,9 @@ main {
 .img_projects {
     justify-content: right !important;
     width:50%;
-    margin-left: 2em;
+    /*margin-left: 2em;*/
     margin-right:-3em;
-    margin-top:-1.5em;
+    /*margin-top:-1.5em;*/
 }
 
 .img_dataprojects {
