--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,8 @@
     <body>
         <header>
             <div id="siteTitle">
-                <a href="/"><span class="underline">ashley qin</span></a>
+<!--                <a href="/"><span class="underline">ashley qin</span></a>-->
+                <a href="/">ashley qin</a>
             </div>
 
             <nav>
