--- a/styles/main.css
+++ b/styles/main.css
@@ -474,7 +474,7 @@ main {
     justify-content: right !important;
     width:26%;
     margin-left: 2em;
-    margin-right:-3em;
+    margin-right:-2em;
     margin-top:-1.5em;
 }
 
@@ -588,6 +588,7 @@ main {
 .img_dataprojects {
     /*margin-left: 8em;*/
     text-align: center;
+    margin-top: 1em;
 }
 
 .project-title {
