--- a/styles/main.css
+++ b/styles/main.css
@@ -146,28 +146,6 @@ nav {
     justify-items: right;
 }
 
-.underline {
-    border-bottom: 2px solid var(--color-blue);
-    display: inline-block;
-    line-height: 1;
-    text-shadow:
-    2px 2px white,
-    2px -2px white,
-    -2px 2px white,
-    -2px -2px white;
-}
-
-.underline_nav {
-    border-bottom: 2px solid var(--color-blue);
-    display: inline-block;
-    line-height: 1.1;
-    text-shadow:
-    2px 2px white,
-    2px -2px white,
-    -2px 2px white,
-    -2px -2px white;
-}
-
 nav a {
     font-size: 100%;
     letter-spacing: 0.05em;
@@ -587,7 +565,8 @@ main {
 
 .img_dataprojects {
     /*margin-left: 8em;*/
-    width: 110%;
+    width: 120%;
+    left: 50%;
     margin-top: 1em;
     margin-bottom: 2em;
 }
@@ -616,5 +595,16 @@ main {
     margin-top: 4em;
     text-align: center;
     display: block;
+}
+
+.underline {
+    border-bottom: 2px solid var(--color-blue);
+    display: inline-block;
+    line-height: 1;
+    text-shadow:
+    2px 2px white,
+    2px -2px white,
+    -2px 2px white,
+    -2px -2px white;
 }
 
