--- a/styles/main.css
+++ b/styles/main.css
@@ -565,7 +565,7 @@ main {
 
 .img_dataprojects {
     /*margin-left: 8em;*/
-    width: 120%;
+    width: 140%;
     left: 50%;
     margin-top: 1em;
     margin-bottom: 2em;
@@ -608,3 +608,10 @@ main {
     -2px -2px white;
 }
 
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -100px;
+}
