--- a/styles/main.css
+++ b/styles/main.css
@@ -452,7 +452,7 @@ main {
     justify-content: right !important;
     width:26%;
     margin-left: 1.5em;
-    margin-right:-1em;
+    /*margin-right:-1em;*/
     margin-top:-1.5em;
 }
 
@@ -579,12 +579,11 @@ main {
 }
 
 .project-descriptions {
-    /*font-weight: 100;*/
     font-size: 150%;
     display: block;
     align-items: center;
     margin-bottom: 0.5em;
-    margin-top: 2em;
+    margin-top: 3em;
     margin-right: 1em;
     line-height: 1.6;
 }
