--- a/styles/main.css
+++ b/styles/main.css
@@ -136,7 +136,8 @@ header a:hover {
 #siteTitle {
     z-index: 2000;
     font-size: 200%;
-    margin-left: 6em;
+    /*margin-left: 6em;*/
+    margin-left: auto;
 }
 
 nav {
@@ -386,7 +387,7 @@ main {
 .home-title1 {
     margin-bottom: 1em;
     margin-left: auto;
-    margin-right:0.5em;
+    /*margin-right:0.5em;*/
     display: block;
     font-weight: 500;
     font-size: 200%;
@@ -561,7 +562,7 @@ main {
 }
 
 .img_abstracts {
-    width: 140%;
+    width: 160%;
     margin-top: 1em;
     margin-bottom: 2em;
     display: block;
