--- a/styles/main.css
+++ b/styles/main.css
@@ -136,8 +136,8 @@ header a:hover {
 #siteTitle {
     z-index: 2000;
     font-size: 200%;
-    /*margin-left: 6em;*/
-    margin-left: auto;
+    margin-left: 6em;
+    margin-right: auto;
 }
 
 nav {
@@ -562,10 +562,10 @@ main {
 }
 
 .img_abstracts {
-    width: 160%;
+    width: 180%;
     margin-top: 1em;
     margin-bottom: 2em;
-    display: block;
+    /*display: block;*/
     margin-left: auto;
     margin-right: auto;
 }
