--- a/styles/main.css
+++ b/styles/main.css
@@ -136,7 +136,7 @@ header a:hover {
 #siteTitle {
     z-index: 2000;
     font-size: 200%;
-    margin-left: 7em;
+    margin-left: 6em;
     margin-right: auto;
 }
 
@@ -144,7 +144,7 @@ nav {
     display: flex;
     z-index: 2000;
     margin-left: auto;
-    justify-items: right;
+    justify-items: left;
 }
 
 nav a {
