--- a/styles/main.css
+++ b/styles/main.css
@@ -151,7 +151,7 @@ nav a {
     font-size: 100%;
     letter-spacing: 0.05em;
     margin-right: 9em;
-    background: yellow;
+    width: 50px;
 }
 
 footer {
