--- a/styles/main.css
+++ b/styles/main.css
@@ -136,8 +136,8 @@ header a:hover {
 #siteTitle {
     z-index: 2000;
     font-size: 200%;
-    margin-left: 6em;
-    margin-right: auto;
+    /*margin-left: 6em;
+    margin-right: auto;*/
 }
 
 nav {
@@ -156,7 +156,7 @@ nav a {
     width: 30px;*/
     font-size: 100%;
     letter-spacing: 0.05em;
-    margin: 1em;
+    margin: 2em;
 }
 
 footer {
